# coursepointer

./: .clang-format-ignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.old  LICENSE.txt  README.md  about.hbs  about.toml  build.rs  conftest.py  coursepointer.py  main.py  pyproject.toml  rustfmt.toml  setup_node_env.js
.github/actions/lint/: action.yml
.github/actions/setup-and-cache/: action.yml
.github/actions/web/: action.yml
.github/workflows/: build-test.yml  ci.yml  delete-caches.yml  extras.yml  lint.yml  periodic.yml  publish-web.yml  release.yml
coretypes/: Cargo.toml  README.md
coretypes/src/: lib.rs  measure.rs
coursepointer/: Cargo.toml  build.rs
coursepointer-cli/: Cargo.toml
coursepointer-cli/src/: main.rs
coursepointer-dotnet/: .gitignore  dotnet.sln
coursepointer-dotnet/src/App/: App.fsproj  Program.fs
coursepointer-dotnet/src/CoursePointer/: CoursePointer.fsproj  Geodesy.fs  Library.fs  Measures.fs
coursepointer-dotnet/tests/CoursePointer.Tests/: CoursePointer.Tests.fsproj  Main.fs
coursepointer-py/: coursepointer.py
coursepointer-rs/: Cargo.toml  pyproject.toml
coursepointer-rs/coursepointer/: Cargo.toml
coursepointer-rs/coursepointer-cli/: Cargo.toml
coursepointer-rs/coursepointer-cli/src/: main.rs
coursepointer-rs/coursepointer/src/: fit.rs  lib.rs  main.rs
coursepointer-rs/fitcourse/: Cargo.toml
coursepointer-rs/geo/: Cargo.toml  build.rs
coursepointer-rs/geo/src/: lib.rs
coursepointer-rs/geographic/: Cargo.toml  build.rs
coursepointer-rs/geographic/src/: lib.rs
coursepointer-rs/integration/: README.md  integration.py  pyproject.toml
coursepointer-rs/integration/data/: cptr002.fit
coursepointer-rs/tools/: readfit.py
coursepointer/include/GeographicLib/: Config.h
coursepointer/src/: algorithm.rs  coretypes.rs  course.rs  fit.rs  geographic.rs  gpx.rs  lib.rs  measure.rs  shim.cpp
coursepointer/testdata/: intercepts.csv
cpp/: .clang-format  CMakeLists.txt
devtools/: Cargo.toml  pyproject.toml
devtools/src/readfit/: __init__.py
devtools/src/waypoints/: __init__.py
docs/: Course Point Distances.nb  bdist_readme.txt  development.md  garmin_fit.md  point_types.md  readme.md  third_party_licenses.html  third_party_licenses.md  web_third_party_licenses.md
docs/sample-files/: cptr002.fit  cptr002.gpx
dotnet/: .gitignore  Directory.Packages.props  README.md  dotnet.sln  paket.dependencies
dotnet/src/App/: App.fsproj
dotnet/src/CoursePointer/: CoursePointer.fsproj  Geodesy.fs  Library.fs  paket.references
dotnet/tests/: paket.references
dotnet/tests/CoursePointer.Tests/: CoursePointer.Tests.fsproj  Main.fs
experimental/coursepointer-dotnet/: .gitignore
experimental/coursepointer-dotnet/src/App/: App.fsproj  paket.references
experimental/coursepointer-dotnet/src/CoursePointer/: CoursePointer.fsproj
experimental/coursepointer-dotnet/tests/CoursePointer.Tests/: Main.fs
geographic/: Cargo.toml  README.md  build.rs
geographic/include/: shim.h  shim.hpp
geographic/src/: lib.rs  shim.cc  shim.cpp
include/: shim.h  shim.hpp
include/GeographicLib/: Config.h
integ/: main.py  pyproject.toml
integration/: README.md  data  integration.py  pyproject.toml
integration-stub/: Cargo.toml
integration-stub/src/: main.rs
integration/data/: cptr001.fit  cptr002.gpx
integration/src/integration/: __init__.py  cargo.py  fixtures.py  plugin.py
integration/src/integration/data/: cptr003.fit  cptr003.gpx  cptr003_connect.fit  cptr004.gpx  cptr006.gpx  cptr007.gpx  invalid_truncated.fit
integration/tests/: test_assumptions.py  test_cli.py  test_fit.py  test_fit_encoding.py  test_integration_lib.py  test_math.py  test_tests.py
res/: Icon.afdesign
rust/: Cargo.toml
rust/demo/: build.rs
rust/demo/src/: blobstore.cc  lib.rs
rust/geo/: Cargo.toml  README.md  build.rs
rust/geo/include/: shim.h
rust/geo/src/: lib.rs
rust/teststub/: Cargo.toml
scripts/: about.hbs  activate_wasm_sdks.sh  activate_wasm_tools.sh  build_artifacts_macos.sh  cargo_with_features.py  check_ci_run.py  check_release.py  gen_release_notes.py  install_wasm_tools.sh  node_tests.sh  publish_web.sh  release.py  setup_wasm_sdks.sh  slowcheck.sh  update_third_party_licenses.sh  upload_macos.sh  upload_windows.cmd  upload_windows.ps1  upload_windows.sh
src/: algorithm.rs  course.rs  fit.rs  geographic.rs  gpx.rs  internal.rs  lib.rs  measure.rs  point_type.rs  shim.cpp  shim_embind.cpp  testonly.rs  types.rs
testdata/: README.md  intercepts_near.csv
tools/: check_release.py  pyproject.toml  readfit.py  waypoints.py
wasm/: Cargo.toml
web/: README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  setup.js  vite.config.js
web/coursepointer-wasm/: Cargo.toml  build.sh
web/coursepointer-wasm/pkg/: package.json
web/coursepointer-wasm/src/: lib.rs
web/public/: 404.html
web/src/: const.ts  geographic.ts  main.ts  messages.ts  options.ts  style.css  wasm-deps.ts  worker.ts
web/src/wasm/: .gitignore  Makefile  em++.sh
