[package]
name = "coursepointer"
description = "Converts waypoints into Garmin FIT course points"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
default-run = "coursepointer"
license = "MIT"
authors = ["Mark Shroyer <mark@shroyer.name>"]
repository = "https://github.com/mshroyer/coursepointer/"
readme = "README.md"
categories = ["command-line-utilities", "science::geo"]

[package.metadata.winresource]
FileDescription = "CoursePointer CLI"
ProductName = "CoursePointer"
LegalCopyright = "© 2025 Mark Shroyer - MIT License"

[lib]
name = "coursepointer"
path = "src/lib.rs"

[[bin]]
name = "coursepointer"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
num-traits = "0.2.19"
quick-xml = "0.38.0"
thiserror = "2.0.12"
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.39", optional = true, features = ["cargo", "derive", "wrap_help"] }
cxx = "1.0.158"
approx = "0.5.1"
dimensioned = { version = "0.8.0", features = ["approx"] }
clap-cargo = { version = "0.15.2", optional = true }
lazy_static = { version = "1.5.0" } # Patch for MVS
rustversion = { version = "1.0.6" } # Patch for MVS
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", optional = true, features = ["env-filter"] }
tracing-span-tree = "0.1.1"
strum = { version = "0.27.1", features = ["derive"] }
sys-locale = { version = "0.3.2", optional = true }
phf = { version = "0.12.1", features = ["macros"] }
rayon = {  version = "1.10.0", optional = true }
regex = "1.11.1"

[dev-dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
csv = "1.3.1"
paste = "1.0.15"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["cli", "rayon"]
cli = ["dep:anyhow", "dep:clap", "dep:clap-cargo", "dep:sys-locale", "dep:tracing-subscriber"]
full-geolib = []
rayon = ["dep:rayon"]

[build-dependencies]
cxx-build = "1.0.158"
rustc_version = "0.4.1"

[target.'cfg(target_os = "windows")'.build-dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
winresource = "0.1.22"

[workspace]
resolver = "2"
members = ["devtools"]

[profile.release]
# Uncomment to enable release build profiling, or set
# CARGO_PROFILE_RELEASE_DEBUG to "true" to do this on a temporary basis.
#debug = "line-tables-only"
lto = true
