[project]
name = "coursepointer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["integration", "tools"]

[tool.ruff]
exclude = ["geographic/geographiclib/**"]

[tool.ruff.lint.extend-per-file-ignores]
# Pytest fixtures confuse ruff
"integration/tests/test_*.py" = ["F401", "F811"]
