[package]
name = "coursepointer"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
coretypes = { version = "0.1.0", path = "../coretypes" }
geographic = { version = "0.1.0", path = "../geographic" }
num-traits = "0.2.19"
quick-xml = "0.37.5"
thiserror = "2.0.12"

[lib]
doctest = false

[dev-dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
