[package]
name = "coursepointer"
version = "0.1.0"
edition = "2024"

[lib]
name = "coursepointer"
path = "src/lib.rs"
doctest = true

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
byteorder = "1.5.0"
chrono = "0.4.41"
coretypes = { version = "0.1.0", path = "../coretypes" }
geographic = { version = "0.1.0", path = "../geographic" }
num-traits = "0.2.19"
quick-xml = "0.37.5"
thiserror = "2.0.12"
log = "0.4.27"
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.39", optional = true, features = ["derive"] }
env_logger = { version = "0.11.8", optional = true }

[dev-dependencies]
anyhow = "1.0.98"
approx = "0.5.1"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }

[features]
default = ["cli"]
cli = ["dep:anyhow", "dep:clap", "dep:env_logger"]
