[package]
name = "devtools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "integration-stub"
path = "src/bin/integration-stub.rs"

[[bin]]
name = "debug-quickcheck"
path = "src/bin/debug_quickcheck.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
coursepointer = { path = ".." }
dimensioned = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
