[project]
name = "devtools"
version = "0.1.0"
description = "Integration tests for coursepointer"
dependencies = [
    "defusedxml>=0.7.1",
    "fitdecode>=0.10.0",
    "garmin-fit-sdk>=21.158.0",
    "geographiclib>=2.0",
]

[project.scripts]
readfit = "readfit:main"
waypoints = "waypoints:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/readfit", "src/waypoints"]
