[package]
name = "integration-stub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
coursepointer = { version = "0.1.0", path = ".." }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
